[package]
name = "planet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
delaunator = "1.0.2"
image = "0.24.9"
imageproc = "0.23.0"
marching-squares = "0.1.1"
noise = "0.8"
num-traits = "0.2.18"
petgraph = "0.6.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.8.1"
uuid = "1.7.0"
anyhow = "1.0.80"
serde = "1.0.197"
serde_json = "1.0.114"
serde_yaml = "0.9.33"
tracing = "0.1.40"
